--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,79 @@
+@font-face {
+    font-family: 'PF BeauSans Pro';
+    src: url('PFBeauSansPro-Regular.eot');
+    src: url('PFBeauSansPro-Regular.eot?#iefix') format('embedded-opentype'),
+        url('PFBeauSansPro-Regular.woff') format('woff'),
+        url('PFBeauSansPro-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
-.navbar {
+@font-face {
+    font-family: 'PF BeauSans Pro';
+    src: url('PFBeauSansPro-Black.eot');
+    src: url('PFBeauSansPro-Black.eot?#iefix') format('embedded-opentype'),
+        url('PFBeauSansPro-Black.woff') format('woff'),
+        url('PFBeauSansPro-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'PF BeauSans Pro';
+    src: url('PFBeauSansPro-Bold.eot');
+    src: url('PFBeauSansPro-Bold.eot?#iefix') format('embedded-opentype'),
+        url('PFBeauSansPro-Bold.woff') format('woff'),
+        url('PFBeauSansPro-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+body {
+    font: 14px "PF BeauSans Pro", Arial, Helvetica, sans-serif;
+}
+header > .navbar {
+    display: -webkit-flex;
+    display: -ms-flex;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    background: #4a4a4a; /* Old browsers */
+    padding: 8px;
+}
+header {
     background: -moz-linear-gradient(top, #4a4a4a 0%, #292929 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, #4a4a4a 0%,#292929 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, #4a4a4a 0%,#292929 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a4a4a', endColorstr='#292929',GradientType=0 ); /* IE6-9 */
-    height: 72px;
+    border-bottom: 2px solid #07904e;
+}
+.navbar {
+    max-width: 960px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+.navbar_link {
+    display: inline-block;
+    width: 100px;
+    border: 1px solid #db2626;
+    border-radius: 7px;
+    padding: 10px 10px 10px 40px;
+    color: #fff;
+    font-size: 14px;
+    background: url(../img/navbarlink.png) 6px center no-repeat, linear-gradient(to top, #6e1313, #ad1e1e);
+    box-sizing: border-box;
+    text-align: center;
+    flex-basis: 11%;
+}
+.navbar_link:hover {
+    background: url(../img/navbarlink.png) 6px center no-repeat, linear-gradient(to top, #4a0404, #e22c2c);
 }
 .left_block {
-    flex-basis: 18%;
-    margin-left: 175px;
+    flex-basis: 25%;
+    
 }
 .mid_block{
-    flex-basis: 75%;
-    position: relative;
+    flex-basis: 60%;
+   
 }
 .mid_block a{
     color: #ffffff;
@@ -30,13 +86,13 @@
 .mid_block a span{
     position: absolute;
     top: 5px;
-    left: 33px;
+    left: 24px;
     color: #5bff99;
 }
 
 .top_text_right{
     position: relative;
-    margin-left: 40px;
+    margin-left: 32px;  
 }
 
 .top_text{
@@ -46,27 +102,129 @@
     color: #5bff99;
 }
 .container {
-    width: 1350px;
+    width: 960px;
     margin: 0 auto;
     
 }
 main{
     background-image: url(../img/bg.jpg);
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
     background-position: center top;
-    background-size: 100% auto;
-    overflow: hidden;
 }
 a {
     text-decoration: none;
+    color: #fff;
+}
+.login {
+
 }
 .form_login {
+    max-width: 280px;
+    background-color: rgba(0,0,0, 0.38);
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background: #00000038;
-    align-items: flex-start;
+    flex-direction: column;
+    color: #fff;
+    padding: 25px 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    position: relative;
 }
-.form_login p{
-    color: #ffffff;
+
+.form_title {
+    font-family: 'Arial', bold;
     font-size: 24px;
+    font-weight: bold;
+    font-style: italic;
+    text-align: left;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+.form_login input{
+    width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 15px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: inset 0 0 5px 3px rgba(0,0,0, 0.3);
+    color: grey;
+    margin-bottom: 10px;
+}
+.form_login a{
+    font-size: 11px;
+    text-align: left;
+    display: flex;
+}
+.submit_button {
+    display: inline-block;
+    padding: 15px 20px;
+    background: linear-gradient(to top, #a00000, #ff1c15);
+    border-radius: 7px;
+    border: 0;
+    color: #fff;
+    font: 18px Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    transition: all .1s ease;
+    float: right;
+}
+.submit_button:hover {
+    background: linear-gradient(to top, #d30000, #ff4a47);
+}
+.logo_text {
+    color: #fff;
+}
+.register_button {
+    background-color: rgba(0,0,0, .38);
+    max-width: 280px;
+    text-align: center;
+    color: #fff;
+    padding: 15px 10px;
+    border-radius: 5px;
+}
+.register_button a{
+    font-size: 18px;
+    font-style: italic;
+}
+.reg_button:hover {
+    background: linear-gradient(to top, #0b9150, #27ff96);
+}
+.reg_button {
+    display: inline-block;
+    width: 95%;
+    margin: 0 auto;
+    font-weight: bold;
+    color: #fff;
+    font: 20px Arial, Helvetica, sans-serif;
+    background: linear-gradient(to top, #086c3c, #1cbe70);
+    border-radius: 5px;
+    padding: 15px 0;
+    border: 1px;
+    cursor: pointer;
+    margin-top: 5px;
+}
+
+.clearfix::after {
+    content: " ";
+    display: block;
+    clear: both;
+}
+.logo_text {
+    position: absolute;
+    left: 40%;
+    top: 60px;
+    font-size: 36px;
+    width: 300px;
+    display: block;
+    text-align: left;
+}
+.bold_text {
+    font-weight: bold;
+}
+.margin_p_first {
+    margin-bottom: 0px;
+}
+.margin_p_second {
+    margin-top: 0px;
 }
